# alexa-messianica

./: .gitignore  LICENSE  Makefile  README.md  ask-resources.json  main.py  pyproject.toml
.github/workflows/: deploy-skill.yml  scraper.yml
beautifulSoupScraper/: helpers.py  main.py  sacred_word_scraper.py  scraper.py  spreadsheet.py
lambda/: requirements.txt
lambda/app/: spreadsheet.py
lambda/app/intents/: default.py  launch.py  sacred_word.py
scraper/: bulk_scraper.py  scraper.py
scraper/scraper/: models.py  pipelines.py  settings.py  spreadsheet.py
scraper/scraper/spiders/: __init__.py  experiencespider.py  sacredwordspider.py
scripts/: install.sh  scrape.sh  setup-cronjob.sh
skill-package/: skill.json
skill-package/interactionModels/custom/: pt-BR.json
src/: main.py
src/lambda/: lambda_function.py
src/lambda/app/: models.py  spreadsheet.py
src/lambda/app/intents/: default.py  experience.py  launch.py  sacred_word.py
src/lambda/app/models/: experience.py
src/lambda/app/spreadsheet/: experience_repository.py  sacred_word_repository.py
src/models/: sacred_word.py
src/mongo/: experience_repository.py
src/scraper/scraper/: items.py  pipelines.py
src/scraper/scraper/spiders/: experiencespider.py  sacredwordspider.py
src/spreadsheet/: experience_repository.py  sacred_word_repository.py  spreadsheet_repository.py
