[tool.poetry]
name = "messianica-bot"
version = "0.1.0"
description = ""
authors = ["João Victor Garcia Coelho"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.0"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
