[tool.poetry]
name = "messianica-bot"
version = "0.1.0"
description = ""
authors = ["João Victor Garcia Coelho"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
python-dotenv = "^1.0.0"
ask-sdk-core = "^1.19.0"
boto3 = "^1.26.165"
gspread = "^5.10.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
