[tool.poetry]
name = "messianica-bot"
version = "0.1.0"
description = ""
authors = ["João Victor Garcia Coelho"]
readme = "README.md"
packages = [{include = "scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
ask-sdk-core = "^1.19.0"
boto3 = "^1.34.121"
gspread = "^5.12.4"
oauth2client = "^4.1.3"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
